--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+build
+.firebase/hosting.YnVpbGQ.cache
+.github/workflows/firebase-hosting-pull-request.yml
+.firebaserc
+firebase.json
